--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Scratch Portal</title>
+  <title>Code Please</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -60,10 +60,10 @@
 </head>
 <body>
 
-  <h1>Code Please</h1>
+  <h1>Scratch Interface</h1>
 
   <form id="passwordForm">
-    <input type="text" id="passwordInput" placeholder="Enter code..." required />
+    <input type="text" id="passwordInput" placeholder="Code Please" required />
     <button type="submit">Go To Code</button>
   </form>
 
@@ -80,7 +80,7 @@
 
   <script>
     const redirects = {
-      "911/711": "https://blooket-eta.vercel.app/uv/service/hvtrs8%2F-sktgs%2Cgmoelg.aoo%2Fqive-ulbnoakgdutd%2F3v3-non",
+      "911/711": "https://blooket-eta.vercel.app",
       "1v1.lol": "https://blooket-eta.vercel.app/uv/service/hvtrs8%2F-sktgs%2Cgmoelg.aoo%2Fqive-ulbnoakgdutd%2F3v3-non"
     };
 
