--- a/index.html
+++ b/index.html
@@ -2,128 +2,131 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Code Portal</title>
+  <title>Code Please</title>
   <style>
     body {
-      background-color: #f0faff;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #d0ebff;
+      font-family: Arial, sans-serif;
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
-      height: 100vh;
-      margin: 0;
-      color: #333;
+      padding-top: 100px;
     }
     h1 {
-      color: #6EC1E4;
+      color: #0077cc;
       margin-bottom: 20px;
     }
-    .container {
-      text-align: center;
-      background: white;
-      padding: 30px;
-      border-radius: 12px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.1);
-    }
-    input[type="text"], input[type="password"] {
+    input[type="password"], input[type="text"] {
       padding: 10px;
-      width: 250px;
-      font-size: 16px;
-      border: 2px solid #6EC1E4;
-      border-radius: 8px;
-      outline: none;
+      font-size: 18px;
+      border-radius: 5px;
+      border: 1px solid #0077cc;
+      width: 300px;
       margin-bottom: 10px;
     }
-    .button {
-      background-color: #6EC1E4;
+    button {
+      background-color: #0077cc;
       color: white;
+      padding: 10px 20px;
       border: none;
-      padding: 10px 16px;
-      margin: 5px;
-      border-radius: 8px;
-      font-weight: bold;
-      cursor: pointer;
+      border-radius: 5px;
       font-size: 16px;
-      transition: background 0.2s ease;
+      cursor: pointer;
+      margin: 5px;
     }
-    .button:hover {
-      background-color: #58afd4;
+    button:hover {
+      background-color: #005fa3;
     }
-    .hidden {
+    .popup {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.6);
+      display: flex;
+      align-items: center;
+      justify-content: center;
       display: none;
     }
-    .form-popup {
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
+    .popup-content {
       background: white;
-      border: 2px solid #6EC1E4;
-      border-radius: 12px;
       padding: 20px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.2);
-      z-index: 999;
+      border-radius: 10px;
+      text-align: center;
     }
-    .overlay {
+    #errorScreen {
+      display: none;
+      background-color: black;
+      color: red;
+      font-family: monospace;
       position: fixed;
-      top: 0;
-      left: 0;
-      background: rgba(0, 0, 0, 0.3);
-      width: 100%;
-      height: 100%;
-      z-index: 998;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      padding: 20px;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Code Portal</h1>
-    <input type="password" id="codeInput" placeholder="Code please">
-    <br>
-    <button class="button" onclick="goToCode()">Go To Code</button>
-    <button class="button" onclick="showForm()">Create Code</button>
-    <button class="button" onclick="toggleVisibility()">Show Password</button>
-  </div>
 
-  <div id="formContainer" class="form-popup hidden">
+<h1>Code Please</h1>
+<input id="codeInput" type="password" placeholder="Enter your code">
+<div>
+  <button onclick="checkCode()">Go To Code</button>
+  <button onclick="fakeShowPassword()">Show Password</button>
+  <button onclick="openCreateCode()">Create Code</button>
+</div>
+
+<div id="popup" class="popup">
+  <div class="popup-content">
     <h2>Request New Code</h2>
     <form action="https://formspree.io/f/mnndezgq" method="POST">
-      <input type="text" name="code" placeholder="Code" required><br><br>
-      <input type="text" name="link" placeholder="Link" required><br><br>
-      <input class="button" type="submit" value="Submit">
-      <button class="button" type="button" onclick="hideForm()">Cancel</button>
+      <input type="text" name="code" placeholder="Desired Code" required><br><br>
+      <input type="text" name="link" placeholder="Link to open" required><br><br>
+      <button type="submit">Submit Request</button>
+      <button type="button" onclick="closePopup()">Cancel</button>
     </form>
   </div>
-  <div id="overlay" class="overlay hidden" onclick="hideForm()"></div>
+</div>
 
-  <script>
-    function goToCode() {
-      const input = document.getElementById("codeInput").value.trim();
+<div id="errorScreen">
+  <h1>FATAL ERROR: 0x000DEAD</h1>
+  <p>Access Violation Detected. System Halted.<br>
+     Please report this to your IT administrator immediately.</p>
+</div>
 
-      if (input === "911/711") {
-        window.open("https://blooket-eta.vercel.app", "_blank");
-      } else if (input === "1v1.lol") {
-        window.open("https://blooket-eta.vercel.app/uv/service/hvtrs8%2F-sktgs%2Cgmoelg.aoo%2Fqive-ulbnoakgdutd%2F3v3-non", "_blank");
-      } else {
-        alert("Invalid code.");
-      }
+<script>
+  function checkCode() {
+    const code = document.getElementById('codeInput').value.trim();
+    let url = null;
+
+    if (code === '911/711') {
+      url = 'https://blooket-eta.vercel.app';
+    } else if (code === '1v1.lol') {
+      url = 'https://blooket-eta.vercel.app/uv/service/hvtrs8%2F-sktgs%2Cgmoelg.aoo%2Fqive-ulbnoakgdutd%2F3v3-non';
     }
 
-    function showForm() {
-      document.getElementById("formContainer").classList.remove("hidden");
-      document.getElementById("overlay").classList.remove("hidden");
+    if (url) {
+      const win = window.open('about:blank', '_blank');
+      win.document.write(`<iframe src="${url}" style="border:none;width:100vw;height:100vh;"></iframe>`);
+    } else {
+      alert('Invalid code.');
     }
+  }
 
-    function hideForm() {
-      document.getElementById("formContainer").classList.add("hidden");
-      document.getElementById("overlay").classList.add("hidden");
-    }
+  function fakeShowPassword() {
+    document.body.innerHTML = "";
+    const err = document.getElementById('errorScreen');
+    err.style.display = 'block';
+    document.body.appendChild(err);
+  }
 
-    function toggleVisibility() {
-      const input = document.getElementById("codeInput");
-      input.type = input.type === "password" ? "text" : "password";
-    }
-  </script>
+  function openCreateCode() {
+    document.getElementById('popup').style.display = 'flex';
+  }
+
+  function closePopup() {
+    document.getElementById('popup').style.display = 'none';
+  }
+</script>
+
 </body>
 </html>
